[package]
name = "r2r_teaching_markers"
version = "0.0.1"
authors = ["Endre Erős <endre.eros@chalmersindustriteknik.se>"]
edition = "2021"
autotests = true

[profile.colcon]
inherits = "release"

[dependencies]
r2r = "0.9.0"
crossbeam = "0.8.4"
tokio = { version = "1.36.0", features = ["full"] }
r2r_interactive_markers = { git = "https://github.com/sequenceplanner/r2r_interactive_markers", tag = "v0.0.1" }
r2r_regular_markers = { git = "https://github.com/sequenceplanner/r2r_regular_markers", tag = "v0.0.2" }